--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "aoc-rs-2023"
 version = "0.1.0"
 edition = "2021"
 authors = ["Pierre Sudron"]
-license = "AGPL-3.0-or-later"
+license = "Unlicense"
 
 [dependencies]
 itertools = "0.12.0"
